         warajevo_read.c: mark deprecated tape functions as such and add
         wrappers so that libspectrum_tape_read doesn't have to call
         deprecated functions (Fred).
20070522 Mark mkinstalldirs as an ignored file (Fred).
20070522 rzx.c: fix printf warning and comment (Fred).
20070526 tape.c,test/test.c: allow for uninitialised buffer on entry to
	 libspectrum_tape_write() (fixes bugs #1725864) (thanks, Dave Mills).
20070526 <almost everything>: update FSF address in GPL notices (Stuart).
20070530 Makefile.am,acinclude.m4,configure.in,doc/libspectrum.txt,
         internals.h,libspectrum.c,libspectrum.h.in,tape.c,wav.c: add simple
         support for loading directly from wav tape files (part of patch
         #1725974) (Fred).
20070530 Makefile.am,csw.c,internals.h,libspectrum.h.in,tape.c,
         tape_accessors.txt,tape_block.[ch],z80em.c: add support for saving csw
         tape files (rest of patch #1725974) (Fred).
20070530 tape.c: tidy up audiofile missing error message (Fred).
20070530 acinclude.m4: remove warning about underquoted definition (Stuart).
20070531 tape.c: fix loading with tape traps (thanks, Stuart Brady) (Fred).
20070601 tape_accessors.txt: add data accessor for rle_pulse block (Fred).
20070602 rzx.c,wav.c: fix up printf() related warnings.
20070602 Ignore make-perl.exe and test/test.exe (Stuart).
20070604 libspectrum.h.in,libspectrum.c: allow Amiga version to decompress
         files with xfdmaster.library (part of patch #1712260) (Chris Young).
20070606 tzx_write.c: add write support for libspectrum RLE block by converting
         to a TZX DRB block due to the limited program support for the TZX
         CSW block (Fred).
20070608 libspectrum.c: add .snapshot as an extension for SNA files as it was
         used by Peter McGavin's Spectrum Emulator on the Amiga (Fred).
20070608 doc/libspectrum.3: fix dashes (Stuart).
20070608 csw.c,wav.c: update FSF address (Stuart).