@@ -167,9 +167,9 @@ typedef enum libspectrum_id_t {
 
   /* Below here, present only in x.x.x and later */
   LIBSPECTRUM_ID_TAPE_WAV,		/* .wav tape image */
-
-  /* Amiga entry for improved compressed file support */
-  LIBSPECTRUM_ID_COMPRESSED_XFD		/* xfdmaster compressed file */
+  LIBSPECTRUM_ID_COMPRESSED_XFD,	/* xfdmaster (Amiga) compressed file */
+  LIBSPECTRUM_ID_DISK_IMG,		/* .img +D disk image */
+  LIBSPECTRUM_ID_DISK_MGT,		/* .mgt +D disk image */
 
 } libspectrum_id_t;
 
@@ -197,6 +197,10 @@ typedef enum libspectrum_class_t {
   /* Below here, present only in 0.3.0 and later */
 
   LIBSPECTRUM_CLASS_MICRODRIVE,		/* Microdrive cartridges */
+
+  /* Below here, present only in x.x.x and later */
+
+  LIBSPECTRUM_CLASS_DISK_PLUSD,		/* +D disk image */
 
 } libspectrum_class_t;
 
